# variationalsparsebayes

./: README.md  pyproject.toml
examples/: sparse_bnn_regression.py  sparse_poly_regression.py  support_vectors.py
tests/: test_polynomial_features.py  test_precomputed_features.py  test_sparse_bnn.py  test_sparse_glm.py  test_svi_half_cauchy.py
variationalsparsebayes/: __init__.py  sparse_glm.py  svi_half_cauchy.py
